[package]
name = "bevy_mod_cuicui"
version = "0.1.0"
edition = "2021"
exclude = ["assets"]

[features]
default = ["reflect"]

# Derive Reflect for all (relevant) types defined in the crate.
reflect = []

# Define additional widges that depend on specific mouse behaviors such as
# grabbing.
# This depends on the beta branch of bevy_mod_picking
picking_widges = ["bevy_mod_picking"]

[dependencies]
# TODO: split layouting, prefabs, rendering in different crates with
# relevant level of bevy features
bevy = { version = "0.9", default-features = false, features = ["bevy_render", "bevy_core_pipeline"] }
bevy-ui-navigation = { version = "0.23.1", default-features = false }
bevy_mod_sysfail = "1.1"
anyhow = "1"
thiserror = "1"

[dependencies.bevy_mod_picking]
version = "0.11"
optional = true
git = "https://github.com/devildahu/bevy_mod_picking.git"
branch = "beta"
default-features = false

[dev-dependencies]
bevy-inspector-egui = "0.16"
bevy = { version = "0.9", features = ["png", "x11", "bevy_asset", "bevy_render"] }
