[package]
name = "cuicui_bevy_fab"
authors = ["Nicola Papale"]
description = "Integrate cuicui_fab and cuicui_fab_parse with bevy"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup", "text", "template", "styling"]
categories = ["game-development", "value-formatting", "template-engine"]
repository = "https://github.com/nicopap/cuicui"
version = "0.1.0"
edition = "2021"

[features]
default = []
no_tracked_debug = []

[dependencies]
anyhow = "1"
bevy = { version = "0.10", default-features = false }
# bevycheck = "0.5.2"
enumset = { version = "1.1", features = ["std"] }
log = "0.4"
smallvec = { version = "1.10", features = ["union", "const_generics", "const_new"] }
thiserror = "1"

fab_parse = { path = "../fab_parse", package = "cuicui_fab_parse" }
fab = { path = "../fab", package = "cuicui_fab" }
reflect_query = { path = "../reflect_query", package = "cuicui_reflect_query" }

[dev-dependencies]
bevy = { version = "0.10", features = ["png", "x11", "bevy_asset", "bevy_render" ] }
bevy-inspector-egui = "0.18.3"
pretty_assertions = "1.3"
