[package]
name = "cuicui_bevy_layout_offset"
authors = ["Nicola Papale"]
description = "A small bevy plugin to manipulate UI element transform"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "ui"]
categories = ["game-development"]
repository = "https://github.com/nicopap/cuicui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_ui"] }
