[package]
name = "cuicui_reflect_path"
authors = ["Nicola Papale"]
description = "Additional bevy reflection path utils"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "reflection"]
categories = ["game-development"]
repository = "https://github.com/nicopap/cuicui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", default-features = false }
