[package]
name = "cuicui_richtext"
authors = ["Nicola Papale"]
description = "A bevy plugin to manage text without boilerplate"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bevy", "markup", "text", "template", "styling"]
categories = ["game-development", "gui", "value-formatting", "template-engine"]
repository = "https://github.com/nicopap/cuicui"
version = "0.1.0"
edition = "2021"

[features]
default = []
no_tracked_debug = []

[dependencies]
anyhow = "1"
bevy = { version = "0.10", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_text", "bevy_ui"] }
enumset = { version = "1.1", features = ["std"] }
smallvec = { version = "1.10", features = ["union", "const_generics", "const_new"] }
string-interner = { version = "0.14", default-features = false, features = ["std", "inline-more", "backends"] }
thiserror = "1"
winnow = "0.4.4"

datazoo = { path = "../datazoo", package = "cuicui_datazoo" }
recs = { path = "../recs", package = "cuicui_recs" }

[dev-dependencies]
bevy = { version = "0.10", features = ["png", "x11", "bevy_asset", "bevy_render" ] }
bevy-inspector-egui = "0.18.3"
pretty_assertions = "1.3"
